--- a/index.html
+++ b/index.html
@@ -13112,15 +13112,7 @@ div#notebook {
 <body>
   <div tabindex="-1" id="notebook" class="border-box-sizing">
     <div class="container" id="notebook-container">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div><div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="photo_small.jpg" alt=""></p>
-
-</div>
-</div>
-</div>
+<meta name="viewport" content="width=device-width, initial-scale=1"><img src="headshot_tom.jpg" alt="" height=200 style="display: block; margin-left: auto; margin-right: auto;">
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -13131,7 +13123,8 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="About-me">About me<a class="anchor-link" href="#About-me">&#182;</a></h2><p>I am a 3rd year PhD student in the DTAI Research group at KU Leuven with Prof. Jesse Davis as my promotor. My research focuses on 'learning' (i.e., predictive and descriptive analytics) from complex time series, mixed with some sports analytics.</p>
+<h2 id="About-me">About me<a class="anchor-link" href="#About-me">&#182;</a></h2><p>I am a 3rd year PhD student in the DTAI Research group at KU Leuven working with Prof. <a href="https://people.cs.kuleuven.be/~jesse.davis/">Jesse Davis</a>.</p>
+<p>My research interests lie in <em>learning</em> from complex data streams (both predictive and descriptive analytics), with a focus on soccer analytics.</p>
 
 </div>
 </div>
@@ -13139,22 +13132,32 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Publications">Publications<a class="anchor-link" href="#Publications">&#182;</a></h2><h4 id="2018">2018<a class="anchor-link" href="#2018">&#182;</a></h4><ul>
-<li><p>AMIE: Automatic Monitoring of Indoor Exercises. <em>Tom Decroos, Kurt Schütte, Tim Op De Beéck, Benedicte Vanwanseele, Jesse Davis.</em> ECML/PKDD 2018. [<a href="https://lirias.kuleuven.be/retrieve/514399">paper pdf</a>] [<a href="reports/amie-v3.pptx">slides pptx</a>] [<a href="reports/amie-poster.pdf">poster pdf</a>]</p>
+<h2 id="Publications">Publications<a class="anchor-link" href="#Publications">&#182;</a></h2><h4 id="2019">2019<a class="anchor-link" href="#2019">&#182;</a></h4><ul>
+<li>Actions Speak Louder Than Goals: Valuing Player Actions in Soccer. <em>Tom Decroos, Lotte Bransen, Jan Van Haaren, Jesse Davis.</em> <strong>KDD 2019</strong>. Download link coming soon.</li>
+</ul>
+<h4 id="2018">2018<a class="anchor-link" href="#2018">&#182;</a></h4><ul>
+<li><p>AMIE: Automatic Monitoring of Indoor Exercises. <em>Tom Decroos, Kurt Schütte, Tim Op De Beéck, Benedicte Vanwanseele, Jesse Davis.</em> <strong>ECML/PKDD 2018</strong>.
+[<a href="https://lirias.kuleuven.be/retrieve/514399">paper pdf</a>] [<a href="reports/amie-v3.pptx">slides pptx</a>] [<a href="reports/amie-poster.pdf">poster pdf</a>]</p>
 </li>
-<li><p>Characterizing Soccer Players' Playing Style from Match Event Streams. <em>Aron Geerts, Tom Decroos, Jesse Davis.</em> Machine Learning and Data Mining for Sports Analytics ECML/PKDD 2018 workshop. [<a href="https://lirias.kuleuven.be/retrieve/517045">paper pdf</a>] [<a href="reports/player-vectors-v2.pptx">slides pptx</a>]</p>
+<li><p>Characterizing Soccer Players' Playing Style from Match Event Streams. <em>Aron Geerts, Tom Decroos, Jesse Davis.</em> Machine Learning and Data Mining for Sports Analytics ECML/PKDD 2018 workshop.
+[<a href="https://lirias.kuleuven.be/retrieve/517045">paper pdf</a>] [<a href="reports/player-vectors-v2.pptx">slides pptx</a>]</p>
 </li>
-<li><p>Automatic Discovery of Tactics in Spatio-Temporal Soccer Match Data. <em>Tom Decroos, Jan Van Haaren, Jesse Davis.</em> KDD 2018. [<a href="https://lirias.kuleuven.be/retrieve/510838">paper pdf</a>] [<a href="reports/tactics-wide-v2.pdf">slides pdf</a>] [<a href="reports/tactics-wide-v2.pptx">slides pptx</a>] [<a href="reports/tactics-poster.pdf">poster pdf</a>]</p>
+<li><p>Automatic Discovery of Tactics in Spatio-Temporal Soccer Match Data. <em>Tom Decroos, Jan Van Haaren, Jesse Davis.</em> <strong>KDD 2018</strong>.
+[<a href="https://lirias.kuleuven.be/retrieve/510838">paper pdf</a>] [<a href="reports/tactics-wide-v2.pdf">slides pdf</a>] [<a href="reports/tactics-wide-v2.pptx">slides pptx</a>] [<a href="reports/tactics-poster.pdf">poster pdf</a>]</p>
 </li>
-<li><p>Actions Speak Louder Than Goals: Valuing Player Actions in Soccer. <em>Tom Decroos*, Lotte Bransen*, Jan Van Haaren, Jesse Davis</em>. Arxiv. [<a href="https://arxiv.org/pdf/1802.07127.pdf">paper pdf</a>]</p>
+<li><p>Actions Speak Louder Than Goals: Valuing Player Actions in Soccer. <em>Tom Decroos*, Lotte Bransen*, Jan Van Haaren, Jesse Davis</em>. Arxiv.
+[<a href="https://arxiv.org/pdf/1802.07127.pdf">paper pdf</a>]</p>
 </li>
 </ul>
 <h4 id="2017">2017<a class="anchor-link" href="#2017">&#182;</a></h4><ul>
-<li><p>STARSS: A spatio-temporal action rating system for soccer. <em>Tom Decroos, Jan Van Haaren, Vladimir Dzyuba, Jesse Davis.</em> Machine Learning and Data Mining for Sports Analytics ECML/PKDD 2017 workshop. [<a href="https://lirias.kuleuven.be/retrieve/465691">paper pdf</a>] [<a href="reports/STARSS.pdf">slides pdf</a>] [<a href="reports/STARSS.pptx">slides pptx</a>]</p>
+<li><p>STARSS: A spatio-temporal action rating system for soccer. <em>Tom Decroos, Jan Van Haaren, Vladimir Dzyuba, Jesse Davis.</em> Machine Learning and Data Mining for Sports Analytics ECML/PKDD 2017 workshop. [<a href="https://lirias.kuleuven.be/retrieve/465691">paper pdf</a>]
+[<a href="reports/STARSS.pdf">slides pdf</a>] [<a href="reports/STARSS.pptx">slides pptx</a>]</p>
 </li>
-<li><p>Predicting the potential of professional soccer players. <em>Ruben Vroonen, Tom Decroos, Jan Van Haaren, Jesse Davis.</em> Machine Learning and Data Mining for Sports Analytics ECML/PKDD 2017 workshop. [<a href="https://lirias.kuleuven.be/retrieve/465703">paper pdf</a>] [<a href="reports/APROPOS.pdf">slides pdf</a>] [<a href="reports/APROPOS.pptx">slides pptx</a>]</p>
+<li><p>Predicting the potential of professional soccer players. <em>Ruben Vroonen, Tom Decroos, Jan Van Haaren, Jesse Davis.</em> Machine Learning and Data Mining for Sports Analytics ECML/PKDD 2017 workshop. [<a href="https://lirias.kuleuven.be/retrieve/465703">paper pdf</a>]
+[<a href="reports/APROPOS.pdf">slides pdf</a>] [<a href="reports/APROPOS.pptx">slides pptx</a>]</p>
 </li>
-<li><p>Predicting soccer highlights from spatio-temporal match event streams. <em>Tom Decroos, Vladimir Dzyuba, Jan Van Haaren, Jesse Davis.</em> AAAI 2017. [<a href="https://lirias.kuleuven.be/retrieve/415729">paper pdf</a>] [<a href="reports/AAAI17poster.pdf">poster pdf</a>]</p>
+<li><p>Predicting soccer highlights from spatio-temporal match event streams. <em>Tom Decroos, Vladimir Dzyuba, Jan Van Haaren, Jesse Davis.</em> <strong>AAAI 2017</strong>.
+[<a href="https://lirias.kuleuven.be/retrieve/415729">paper pdf</a>] [<a href="reports/AAAI17poster.pdf">poster pdf</a>]</p>
 </li>
 </ul>
 <p>You can also look at my <a href="https://lirias.kuleuven.be/cv?u=U0085417">Lirias</a> or <a href="https://scholar.google.be/citations?user=qjT9xpQAAAAJ&amp;hl=en">google scholar</a>.</p>
@@ -13185,6 +13188,9 @@ div#notebook {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Community-service">Community service<a class="anchor-link" href="#Community-service">&#182;</a></h2><h4 id="Reviewing">Reviewing<a class="anchor-link" href="#Reviewing">&#182;</a></h4><ul>
+<li>Reviewer for <a href="http://www.ecmlpkdd2019.org/">ECMLPKDD-2019</a> </li>
+<li>Reviewer for <a href="http://ieeevis.org/year/2019/welcome">IEEE VIS-2019</a></li>
+<li>Subreviewer for <a href="https://ijcai19.org/">IJCAI-2019</a></li>
 <li>Reviewer for  <a href="https://aaai.org/Conferences/AAAI-19/">AAAI-2019</a></li>
 <li>Reviewer for the <a href="https://home.liebertpub.com/publications/big-data/611/overview">Big Data</a> Journal</li>
 <li>Reviewer for the <a href="https://dtai.cs.kuleuven.be/events/MLSA18">Machine Learning and Data Mining for Sports Analytics Workshop</a> at <a href="http://ecmlpkdd2018.org/">ECMLPKDD-18</a>.</li>
@@ -13244,7 +13250,7 @@ Celestijnenlaan 200A box 2402<br>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><em>Last update: 10/10/2018</em></p>
+<p><em>Last update: 22/05/2019</em></p>
 
 </div>
 </div>
