--- a/index.html
+++ b/index.html
@@ -11796,6 +11796,8 @@ div#notebook {
 <h2 id="Publications">Publications<a class="anchor-link" href="#Publications">&#182;</a></h2><h4 id="2019">2019<a class="anchor-link" href="#2019">&#182;</a></h4><ul>
 <li>Actions Speak Louder Than Goals: Valuing Player Actions in Soccer. <em>Tom Decroos, Lotte Bransen, Jan Van Haaren, Jesse Davis.</em> <strong>KDD 2019</strong>. [<a href="reports/kdd19_tomd.pdf">paper pdf</a>]</li>
 <li>Player Vectors: Characterizing Soccer Players' Playing Style from Match Event Streams. <em>Tom Decroos, Jesse Davis.</em> <strong>ECML/PKDD 2019</strong>. [<a href="reports/ecml19_tomd.pdf">paper_pdf</a>]</li>
+<li>Analyzing Soccer Players’ Skill Ratings Over Time Using Tensor-Based Methods. <em>Kenneth Verstraete, Tom Decroos, Bruno Coussement, Nick Vannieuwenhoven, Jesse Davis.</em> Machine Learning and Data Mining for Sports Analytics ECML/PKDD 2018 workshop.
+[<a href="reports/mlsa19-verstraete.pdf">paper pdf</a>]</li>
 </ul>
 <h4 id="2018">2018<a class="anchor-link" href="#2018">&#182;</a></h4><ul>
 <li><p>Automatic Discovery of Tactics in Spatio-Temporal Soccer Match Data. <em>Tom Decroos, Jan Van Haaren, Jesse Davis.</em> <strong>KDD 2018</strong>.
@@ -11920,7 +11922,7 @@ Celestijnenlaan 200A box 2402<br>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><em>Last update: 05/07/2019</em></p>
+<p><em>Last update: 29/07/2019</em></p>
 
 </div>
 </div>
